--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,89 @@
-.title{
-	color: red;
+/* INDICE */
+
+/* Index Perfil   */
+
+@font-face 
+{
+    font-family: Index;
+    src: url(/fonts/abuelo-index.ttf);
+}
+
+.bg
+{
+	height: 100%;
+	padding: 5px 5px 0 5px;
+	width: 100%;
+}
+
+/* INDEX PERFIL */
+
+.perfil-avatar
+{
+	border-radius: 50%;
+	height: 150px;
+	left: 50%;
+	margin-left: -75px;
+	position: absolute;
+	top: 15px;
+	width: 150px;
+	z-index: 1;
+
+	-webkit-box-shadow: 7px 7px 5px 0px rgba(50, 50, 50, 1);
+	-moz-box-shadow:    7px 7px 5px 0px rgba(50, 50, 50, 1);
+	box-shadow:         7px 7px 5px 0px rgba(50, 50, 50, 1);
+}
+
+.perfil-avatar img
+{
+	border-radius: 50%;
+	height: 150px;
+	width: 150px;
+}
+
+.perfil-label
+{
+	background-color: rgba(0, 0, 0, 0.7);
+	border-radius: 4px;
+	color: white;
+	font-family: Index;
+	left: 50%;
+	margin-left: -150px;
+	padding: 20px;
+	position: absolute;
+	text-align: center;
+	top: 230px;
+	width: 300px;
+	z-index: 1;
+}
+
+.perfil-title
+{
+	font-size: 40px;
+}
+
+.perfil-subtitle
+{
+	font-size: 20px;
+}
+
+.perfil-button,
+.perfil-button:hover,
+.perfil-button:active,
+.perfil-button:visited
+{
+	border: 1px solid white;
+	border-radius: 4px;
+	color: white;
+	display: inline-block;
+	font-size: 20px;
+	margin-top: 20px;
+	padding: 6px 70px 6px 70px;
+	text-decoration: none;
+
+}
+
+.perfil-button:hover
+{
+	background-color: white;
+	color: black;
 }
