--- a/public/css/style.css
+++ b/public/css/style.css
@@ -290,6 +290,7 @@ body
 {
 	background-color: #337ab7;
 	border-radius: 4px;
+	margin-bottom: 20px;
 	padding: 20px;
 	text-align: center;
 	width: 800px;
