View norbertosevilla binding with BD ok, resize upload img bug ok

--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -93,7 +93,7 @@
 		width: 600px;
 	}
 
-	.album img
+	.pictures li img
 	{
 		border-radius: 4px;
 		margin-bottom: 2px;
@@ -307,7 +307,7 @@
 		width: 100%;
 	}
 
-	.album img
+	.pictures li img
 	{
 		border-radius: 4px;
 		margin-bottom: 2px;
