--- a/public/css/style.css
+++ b/public/css/style.css
@@ -188,7 +188,7 @@ body
 	list-style: none;
 }
 
-.album img
+.pictures li img
 {
 	border-radius: 4px;
 	margin-bottom: 2px;
@@ -226,7 +226,15 @@ body
 .modal-img
 {
 	padding: 5px;
+}
+
+.modal-img img
+{
+	display: inline-block;
+	
 	text-align: center;
+	
+
 }
 
 .modal-text
