--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -96,8 +96,20 @@
 	.pictures li img
 	{
 		border-radius: 4px;
+		border: 2px solid white;
+		cursor: pointer;
 		margin-bottom: 2px;
 		width: 270px;
+	}
+
+	.pictures li img:hover
+	{
+		border: 2px solid #337ab7;
+		transition: border-color 0.5s ease;  
+
+		-webkit-box-shadow: 0px 3px 3px 0px rgba(51, 122, 183, 0.75);
+        -moz-box-shadow:    0px 3px 3px 0px rgba(51, 122, 183, 0.75);
+		box-shadow:         0px 3px 3px 0px rgba(51, 122, 183, 0.75);
 	}
 }
 
@@ -310,6 +322,7 @@
 	.pictures li img
 	{
 		border-radius: 4px;
+		cursor: pointer;
 		margin-bottom: 2px;
 		width: 220px;
 	}
